k8s/deployment-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
  labels:
    app: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: bakigoal/service-a
          ports:
            - containerPort: 2222
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
    - port: 2222
      targetPort: 2222
  type: NodePort
