k8s/service-a.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
    - port: 2222
      targetPort: 2222
  type: NodePort
