k8s/service-b.yml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
    - port: 3333
      targetPort: 3333
  type: LoadBalancer
